Fixed CSS WP Query + Pagination blockGap specificity

--- a/packages/block-library/src/query-pagination/editor.scss
+++ b/packages/block-library/src/query-pagination/editor.scss
@@ -3,12 +3,7 @@
 	justify-content: center;
 }
 
-:where(.editor-styles-wrapper) {
-	.wp-block-query-pagination {
-		max-width: 100%;
-		&.block-editor-block-list__layout {
-			margin: 0;
-		}
-	}
+:where(.editor-styles-wrapper .wp-block-query-pagination.block-editor-block-list__layout) {
+	margin: 0;
 }
 
